# pyx

./: .gitignore  Makefile.py  README.md  pyproject.toml
src/examples/: change_colors.py  columns.py  hello_then_world.py  hello_world.py  panel.py  progress_bar.py  progress_bars.py  remove_from_first.py  unmount.py  wait_then_show_message.py
src/pyx/: __init__.py  component.py  effects.py  element.py  hooks.py  node.py  rich.py  utils.py
src/tests/: test_component.py  test_element.py  test_node.py  test_rich.py
src/tests/rich/: test_draw.py
src/tests/test_rich/: test_draw.py
