[project]
name = "pyx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Konstantinos Bairaktaris", email = "ikijob@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pyx = "pyx:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ptipython>=1.0.1",
  "pudb>=2025.1",
  "pynvim>=0.5.2",
  "pytest>=8.4.1",
  "ruff>=0.12.4",
]
rich = ["rich>=14.0.0"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
